--- a/templates/home_screen.html
+++ b/templates/home_screen.html
@@ -29,8 +29,8 @@
             
             <div id="uploaded-column" style="display: none;">
                 <div class="uploaded-image">
-                    <p>Uploaded Image</p>
-                    <div id="uploaded-image-container" style="max-width: 600px;"></div>
+                    <p class="upload-title">Uploaded Image</p>
+                    <div id="uploaded-image-container"></div>
                 </div>
             </div>
         </section>
@@ -44,8 +44,9 @@
 
                 <div id="upscaled-column" style="display: none;">
                     <div class="upscaled-image">
-                        <p>Upscaled Image</p>
-                        <div id="upscaled-image-container" style="max-width: 600px;"></div>
+                        <p class="upscale-title">Upscaled Image</p>
+                        <div id="upscaled-image-container" style="max-width: 600px;">
+                        </div>
                     </div>
                 </div>
 
