--- a/templates/home_screen.html
+++ b/templates/home_screen.html
@@ -54,27 +54,29 @@
             <img class="imgicon" src="../static/utils/images/Imgicon.png" />
           </label>
 
-          <div id="upload-buttons" style="display: none">
-            <div class="Upscale">
-              <button class="UpscaleButt" id="upscale-button">UPSCALE</button>
-              <span class="upload-status"></span>
-            </div>
-          </div>
           <div id="upscaled-column" style="display: none">
             <div class="upscaled-image">
               <p class="upscale-title">Upscaled Image</p>
               <div id="upscaled-image-container" style="max-width: 600px"></div>
             </div>
           </div>
+
+          <div id="upload-buttons" style="display: none">
+            <div class="Upscale">
+              <button class="UpscaleButt" id="upscale-button">UPSCALE</button>
+              <span class="upload-status"></span>
+            </div>
+          </div>
+          
           <div id="image-container">
             <!-- Empty div -->
           </div>
 
           <div id="download-button" style="display: none">
             <div class="Upscale1">
-              <button class="DownloadButt" onclick="downloadImage()">
+              <a id="download-link" class="DownloadButt" download="upscaled_image.jpg" href="#" onclick="downloadImage()">
                 DOWNLOAD
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -96,11 +98,21 @@
                 success: function (response) {
                   var element = document.getElementById("upscaled-column");
                   element.style.display = "block";
+                  var imageSrc = "data:image/jpeg;base64," + response;
                   $("#upscaled-image-container").html(
-                    "<img src='data:image/jpeg;base64," +
-                      response +
-                      "' alt='Upscaled Image'>"
+                    "<img src='" + imageSrc + "' alt='Upscaled Image'>"
                   );
+                  $("#download-link").attr("href", imageSrc);
+                  $("#download-link").attr("download", "upscaled_image.jpg")
+                  $("#download-button").css("display", "block");
+                  $("#upscale-button").hide();
+                  $(".upload-status").hide();
+                  $("#uploaded-column").hide();
+                  $("#image-container").hide();
+                  $("#uploaded-image-container").html(
+                    "<img src='data:image/jpeg;base64,"+ imageData + "'alt='Uploaded Image'>"
+                  );
+                  $("#uploaded-column").show();
                 },
                 error: function (error) {
                   console.log(error);
@@ -111,6 +123,26 @@
             }
           });
         });
+
+        function downloadImage(){
+          var downloadLink = document.getElementById("download-link");
+          var imageSrc = downloadLink.getAttribute("href");
+          var fileName = downloadLink.getAttribute("download");
+
+          var link = document.craeteElement("a");
+          link.href = imageSrc;
+          link.download = fileName;
+          link.target = "_blank";
+          link.click;
+
+          document.body.appendChild(link);
+          link.click()
+
+          setTimeout(function(){
+            URL.revokeObjectURL(link.href);
+            link.remove();
+          }, 100);
+        }
       </script>
       <script src="/static/JS/main.js"></script>
     </div>
