--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -236,7 +236,7 @@ body {
   background-color: #001233;
   color: #f55759;
   border: none;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bolder;
   height: 40px;
   width: 150px;
@@ -292,7 +292,7 @@ body {
 }
 .home-title {
   font-size: 80px;
-  font-weight: bolder;
+  font-weight: 900;
   color: #f55759;
   width: 700px;
 }
@@ -300,6 +300,7 @@ body {
   color: #ecdcc5;
   font-size: 25px;
   margin-bottom: 60px;
+  width: 700px;
 }
 
 .photo button {
@@ -351,7 +352,7 @@ body {
 .upload-title {
   color: #ecdcc5;
   font-size: 24px;
-  margin-top: 90px;
+  margin-top: 118px;
 }
 .upscale-title {
   color: #ecdcc5;
@@ -361,6 +362,7 @@ body {
 .uploaded-image-container img {
   max-width: 600px;
 }
+
 /*GO PREMIUM SCREEN*/
 .prem-free,
 .prem-monthly,
