--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -276,6 +276,16 @@ body {
   border-style: dashed;
 }
 
+  
+.imglbl .uploaded-image-preview {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
 .imgicon {
   margin-left: 50px;
   width: 450px;
@@ -328,7 +338,7 @@ body {
 }
 
 .image-container {
-  display: flex;
+  display: hide;
   justify-content: space-between;
 }
 
@@ -361,6 +371,20 @@ body {
 }
 .uploaded-image-container img {
   max-width: 600px;
+}
+.uploaded-image-container{
+  background-color: #ecdcc5;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+.upscaled-image-container{
+  background-color: #ecdcc5;
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 /*GO PREMIUM SCREEN*/
