--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -221,13 +221,13 @@ body {
 }
 
 .DownloadButt{
+  text-align: center;
   padding: 10px 20px;
   background-color: #f55759;
-  margin-top: 20px;
+  margin-top: 50px;
   border-radius: 20px;
   font-weight: bold;
   font-family: "BeVietnam";
-  margin-bottom: 30px;
   border: 2px solid white;
   text-decoration: none;
   color: #001233;
@@ -285,7 +285,6 @@ body {
 .home-column {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 100%;
 }
 .home-describe {
   margin-top: 200px;
@@ -337,23 +336,22 @@ body {
   flex-basis: 45%;
 }
 
-#uploaded-image img,
-#upscaled-image img {
-  width: 500px;
-  height: auto;
-  border: 1px solid #ccc;
-  padding: 10px;
-  margin-bottom: 10px;
+.image-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
 }
 
-#download-button {
-  text-align: center;
+.image-grid img{
+  align-items: center;
+  height: auto;
+  margin-left: 20px;
 }
 
 .upload-title {
+  text-align: center;
   color: #ecdcc5;
   font-size: 24px;
-  margin-top: 118px;
 }
 .upscale-title {
   color: #ecdcc5;
