--- a/templates/home_screen.html
+++ b/templates/home_screen.html
@@ -35,11 +35,11 @@
 
         <div id="uploaded-column" style="display: none">
           <div class="uploaded-image">
-            <p class="upload-title">Uploaded Image</p>
-            <div id="uploaded-image-container"></div>
+            <div id="uploaded-image-container" style="display: none;"></div>
           </div>
         </div>
       </section>
+
 
       <section>
         <div class="photo">
@@ -54,97 +54,168 @@
             <img class="imgicon" src="../static/utils/images/Imgicon.png" />
           </label>
 
-          <div id="upscaled-column" style="display: none">
-            <div class="upscaled-image">
-              <p class="upscale-title">Upscaled Image</p>
-              <div id="upscaled-image-container" style="max-width: 600px"></div>
-            </div>
-          </div>
-
-          <div id="upload-buttons" style="display: none">
-            <div class="Upscale">
-              <button class="UpscaleButt" id="upscale-button">UPSCALE</button>
-              <span class="upload-status"></span>
-            </div>
-          </div>
-          
-          <div id="image-container">
-            <!-- Empty div -->
-          </div>
-
-          <div id="download-button" style="display: none">
-            <div class="Upscale1">
-              <a id="download-link" class="DownloadButt" download="upscaled_image.jpg" href="#" onclick="downloadImage()">
-                DOWNLOAD
-              </a>
-            </div>
-          </div>
+    <div id="upscaled-column" style="display: none">
+      <div class="upscaled-image">
+        <p class="upscale-title">Upscaled Image</p>
+        <div id="upscaled-image-container" style="max-width: 600px"></div>
+        <div id="image-container">
+          <!-- Empty div -->
         </div>
-      </section>
+      </div>
+    </div>
 
+
+    <div id="uploaded-column" style="display: none">
+      <div class="uploaded-image">
+      <p class="upload-title">Uploaded Image</p>
+      <div id="uploaded-image-container"></div>
+      </div>
+      </div>
+      </section>
+      
+      <section>
+      <div class="photo">
+      <input
+      class="img"
+      type="file"
+      id="file"
+      accept="image/*"
+      onchange="updateUploadStatus()"
+      />
+      <label class="imglbl" for="file">
+      <img class="uploaded-image-preview" src="../static/utils/images/Imgicon.png" />
+      </label>
+      
+      <div id="upscaled-column" style="display: none">
+      <div class="upscaled-image">
+      <p class="upscale-title">Upscaled Image</p>
+      <div id="upscaled-image-container" style="max-width: 600px"></div>
+      </div>
+      </div>
+      
+      <div id="upload-buttons" style="display: none">
+      <div class="Upscale">
+      <button class="UpscaleButt" id="upscale-button">UPSCALE</button>
+      <span class="upload-status"></span>
+      </div>
+      </div>
+      
+      <div id="image-container">
+      <!-- Empty div -->
+      </div>
+      
+      <div id="download-button" style="display: none">
+      <div class="Upscale1">
+      <a id="download-link" class="DownloadButt" download="upscaled_image.jpg" href="#" onclick="downloadImage()">
+      DOWNLOAD
+      </a>
+      </div>
+      </div>
+      </div>
+      </section>
+      
+      <style>
+      .imglbl {
+      display: inline-block;
+      width: 200px;
+      height: 200px;
+      border: 1px solid #ccc;
+      background-color: #f1f1f1;
+      text-align: center;
+      overflow: hidden;
+      }
+      
+      .imglbl .uploaded-image-preview {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      }
+      </style>
+      
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script>
-        $(document).ready(function () {
-          $("#upscale-button").click(function () {
-            var imageData = localStorage.getItem("imageData");
-            console.log(imageData);
-            if (uploadedImage && imageData != null) {
-              $.ajax({
-                url: "/upscale",
-                method: "POST",
-                data: {
-                  imageData: imageData,
-                },
-                success: function (response) {
-                  var element = document.getElementById("upscaled-column");
-                  element.style.display = "block";
-                  var imageSrc = "data:image/jpeg;base64," + response;
-                  $("#upscaled-image-container").html(
-                    "<img src='" + imageSrc + "' alt='Upscaled Image'>"
-                  );
-                  $("#download-link").attr("href", imageSrc);
-                  $("#download-link").attr("download", "upscaled_image.jpg");
-                  $("#download-button").css("display", "block");
-                  $("#upscale-button").hide();
-                  $(".upload-status").hide();
-                 
-                  var uploadedImageContainer = document.getElementById("uploaded-image-container");
-                  uploadedImageContainer.innerHTML = "";
-                  uploadedImageContainer.appendChild(uploadedImage);
-                  $("#image-container").hide();
-                  $("#uploaded-column").show();
-                },
-                error: function (error) {
-                  console.log(error);
-                },
-              });
-            } else {
-              alert("Please upload an image first!");
-            }
-          });
-        });
-
-        function downloadImage(){
-          var downloadLink = document.getElementById("download-link");
-          var imageSrc = downloadLink.getAttribute("href");
-          var fileName = downloadLink.getAttribute("download");
-
-          var link = document.craeteElement("a");
-          link.href = imageSrc;
-          link.download = fileName;
-          link.target = "_blank";
-          link.click;
-
-          document.body.appendChild(link);
-          link.click()
-
-          setTimeout(function(){
-            URL.revokeObjectURL(link.href);
-            link.remove();
-          }, 100);
-        }
+      $(document).ready(function () {
+      // Function to update the uploaded image preview
+      function updateImagePreview(input) {
+      if (input.files && input.files[0]) {
+      var reader = new FileReader();
+      reader.onload = function (e) {
+      $('.uploaded-image-preview').attr('src', e.target.result);
+      };
+      reader.readAsDataURL(input.files[0]);
+      }
+      }
+      
+      // Update the image preview when a file is selected
+      $('#file').change(function () {
+      updateImagePreview(this);
+      });
+      
+      // Rest of your code
+      $("#upscale-button").click(function () {
+      var imageData = localStorage.getItem("imageData");
+      console.log(imageData);
+      if (uploadedImage && imageData != null) {
+      $.ajax({
+      url: "/upscale",
+      method: "POST",
+      data: {
+      imageData: imageData,
+      },
+      success: function (response) {
+      var element = document.getElementById("upscaled-column");
+      element.style.display = "block";
+      var imageSrc = "data:image/jpeg;base64," + response;
+      $("#upscaled-image-container").html(
+      "<img src='" + imageSrc + "' alt='Upscaled Image'>"
+      );
+      $("#download-link").attr("href", imageSrc);
+      $("#download-link").attr("download", "upscaled_image.jpg");
+      $("#download-button").css("display", "block");
+      $("#upscale-button").hide();
+      $(".upload-status").hide();
+      
+      var uploadedImageContainer = document.getElementById("uploaded-image-container");
+      uploadedImageContainer.innerHTML = "";
+      uploadedImageContainer.appendChild(uploadedImage);
+      $("#image-container").hide();
+      $("#uploaded-column").show();
+      },
+      error: function (error) {
+      console.log(error);
+      },
+      });
+      } else {
+      alert("Please upload an image first!");
+      }
+      });
+      
+      function downloadImage() {
+      var downloadLink = document.getElementById("download-link");
+      var imageSrc = downloadLink.getAttribute("href");
+      var fileName = downloadLink.getAttribute("download");
+      
+      var link = document.createElement("a");
+      link.href = imageSrc;
+      link.download = fileName;
+      link.target = "_blank";
+      link.click();
+      
+      document.body.appendChild(link);
+      link.click();
+      
+      setTimeout(function () {
+      URL.revokeObjectURL(link.href);
+      link.remove();
+      }, 100);
+      }
+      });
       </script>
       <script src="/static/JS/main.js"></script>
     </div>
   </body>
-</html>
+
+</html
