--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -11,11 +11,6 @@
       <section>
         <div class="trapezoid1"></div>
         <div class="forgotpassword">
-          {% if reset_success %}
-          <p class="reset-success-message">
-            Password reset email sent successfully!
-          </p>
-          {% endif %}
           <p class="forgotpassDisc">
             Please enter your registered email address, and you will receive a
             password reset link through email.
@@ -32,6 +27,16 @@
               <a class="back-button" href="{{ url_for('login') }}">Back</a>
             </div>
           </form>
+          {% if reset_success %}
+          <p class="reset-success-message">
+            Password reset email sent successfully!
+          </p>
+          {% endif %}
+          {% if email_not_found %}
+          <p class="email-not-found-error">
+            The entered email address is not found in the database.
+          </p>
+          {% endif %}
         </div>
         <div class="trapezoid2"></div>
       </section>
@@ -89,7 +94,14 @@
             })
             .catch((error) => {
               console.error(error);
-              alert("Failed to send password reset email. Please try again.");
+              if (error.code === "auth/user-not-found") {
+                document.getElementById("email-not-found").style.display =
+                  "block";
+              } else {
+                alert(
+                  "Failed to send password reset email. Please try again."
+                );
+              }
             });
         });
     </script>
