--- a/templates/login_screen.html
+++ b/templates/login_screen.html
@@ -43,15 +43,14 @@
             />
             <img
               class="sample"
-              src="../static/utils/images/sample.png"
+              src="static\utils\images\UpdatedSample.png"
               alt="Sample Pic"
             />
             <p class="desc">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut
-              metus ut velit maximus gravida sed a elit. Donec nisi velit,
-              vehicula sit amet sodales in, placerat eget nisi. Ut consectetur
-              scelerisque est, eu finibus orci congue quis. Aliquam cursus vel
-              eros eget dictum. Sed tempor lorem tincidunt convallis molestie.
+              PixelPic is a website that is used to upscale low-res images. 
+              Upload your photo and get a sharper, more vibrant version. Easy to use, 
+              and perfect for anyone who wants to improve their photos.
+               Try PixelPic today!
             </p>
           </div>
         </section>
